--- a/paper/motivation.tex
+++ b/paper/motivation.tex
@@ -1,7 +1,7 @@
 \section{Motivation}
 
-In this section, we motivate mergeable data types and \name
-programming model via a series of examples. 
+In this section, we motivate mergeable data types and the \name
+programming model via a series of examples.
 
 \subsection{Counter}
 
