--- a/paper/model.tex
+++ b/paper/model.tex
@@ -35,18 +35,17 @@ representation is thus optimized for sparse canvases, such as
 whiteboards. The application supports three simple operations:
 creating a new canvas, setting the pixel at a specified coordinate,
 and returning the pixel at a given coordinate. The \C{merge} function
-and \C{deriving versioned} directive are explained below.
-\drawsome lets multiple users collaborate on a canvas that is
-conceptually shared among them. Under a shared-memory abstraction,
-there would be a single copy of the canvas that is updated
-concurrently by multiple clients; from the perspective of any single
-client, the canvas could change without any explicit
-intervention. \name ascribes functional semantics to sharing by
-letting each client work on its own version of the state (the tree
-data structure), later merging concurrent versions on-demand.  Thus,
-the primary artifact of the \name programming model is a versioned
-data structure in which different versions are managed by different
-clients.
+and \C{deriving versioned} directive are explained below.  \drawsome
+lets multiple users collaborate on a canvas that is conceptually
+shared among them. Under a shared-memory abstraction, there would be a
+single copy of the canvas that is updated concurrently by multiple
+clients; from the perspective of any single client, the canvas could
+change without any explicit intervention. \name ascribes functional
+semantics to sharing by letting each client work on its own version of
+the state (the tree data structure in this example), later merging
+concurrent versions on-demand.  Thus, the primary artifact of the
+\name programming model is a versioned data structure in which
+different versions are managed by different clients.
 
 %% The library operates on a representation of versioned data
 %% structures optimized for persistence on disk
@@ -264,31 +263,23 @@ propose no new versions, hence simply obtain Alice's $C_1'$ as next
 versions.
 
 The \drawsome example demonstrates the utility of mergeable data types
-and \name programming model in building concurrent applications with
-conceptual sharing of state. The model lets concurrent computations be
-composed around any mergeable type. As exemplified by \drawsome,
-writing a three-way \C{merge} function is the only creative process in
-lifting an OCaml data type to a mergeable type. We now present few
-more examples of mergeable types, and isolate a recurring pattern in
-their merge functions that serves as a guide to write merge functions
-for more sophisticated types.
-
-\begin{figure}
-  \centering
-  \includegraphics[scale=0.4]{Figures/list-eg}
-
-  \caption{Lists of mergeable values are mergeable. }
-  \label{fig:list-eg}
-\end{figure}
+and the \name programming model in building concurrent applications
+with conceptual state sharing. The model lets concurrent computations
+be composed around any mergeable type. As exemplified by \drawsome,
+writing a three-way \C{merge} function is the only creative process
+involved to lift an OCaml data type to a mergeable type. We now
+present some more examples of mergeable types, and isolate a recurring
+pattern in their merge definitions that serves as a guide to write
+merge functions for more sophisticated types.
 
 \input{list-sig}
 
-{\bf Lists}. List, as an abstract data type, supports three
+{\bf Lists}.  As an abstract data type, lists support three
 operations: \C{insert x i l}, to insert an element \C{x} at position
 \C{i} in the list \C{l}, \C{delete i l}, to delete the element at
 \C{i}'th position, and \C{subst i x l}, to substitute the element at
-\C{i}'th position with \C{x}. Lists of mergeable items are mergeable
-while preserving the following properties:
+the \C{i}'th position with \C{x}.  Lists of mergeable items are
+mergeable if they preserve the following properties:
 \begin{itemize}
   \item Elements present in both the merging lists will be present in
   the final list. No element is deleted unless it is deleted in at
@@ -297,19 +288,19 @@ while preserving the following properties:
   list (unlike Amazon's replicated shopping cart~\cite{dynamo}).
   \item The order of elements is retained. That is, if $x$ occurs
   before $y$ in one of the lists, and if both elements are present in
-  the merged list, then $x$ occurs before $y$ also in the merged list.
-  \item If an element $y$ substitutes $x$ in one list, then $y$ also
-  substitutes $x$ in the merged list (i.e., $x$ is absent and $y$ is
-  present), unless $x$ is deleted or substituted in the other list. In
-  the former case, deletion wins, and neither $x$ nor $y$ occur in the
-  merged list. In the latter case, if $x$ is substituted by a
-  different element $z$ in the other list, then the merged list
-  substitutes $x$ by a merge of $y$ and $z$, defined as per the merge
-  semantics of the list element type.
+  the merged list, then $x$ occurs before $y$ in the merged list.
+\item If an element $y$ is substituted for an element $x$ in one list,
+  then $y$ is also substituted for $x$ in the merged list (i.e., $x$
+  is absent and $y$ is present), unless $x$ is deleted or substituted
+  in the other list. In the former case, deletion wins, and neither
+  $x$ nor $y$ occur in the merged list. In the latter case, if $x$ is
+  substituted by a different element $z$ in the other list, then the
+  merged list substitutes $x$ by a merge of $y$ and $z$, defined as
+  per the merge semantics of the list element type.
 \end{itemize}
-Thus list is an example of a polymorphic mergeable data type that
-demonstrates how mergeability can be composed. The compositionality is
-reified in the the signature of a mergeable list library is shown in
+Thus, lists serve as an example of a polymorphic mergeable data type that
+demonstrates how mergeability can be composed.  Compositionality is
+reified in the the signature of a mergeable list library as shown in
 Fig.~\ref{fig:mlist-sig}; observe that the type of items in the list
 (\C{A.t}) is also required to be mergeable (\C{A.merge}). 
 
@@ -319,27 +310,31 @@ implemented in less than 50 lines of OCaml included in the appendix.
 The functions are described below.
 \begin{itemize}
   \item \C{edit\_seq} takes a pair of lists, \C{v} and $\C{v'}$, and
-  computes the shortest sequence of list operations that need to be
-  applied on \C{v} to obtain \C{v'}. Such a sequence is called an
-  \emph{edit sequence}. The length of the sequence corresponds to the
-  standard notion of the \emph{edit distance} between the two lists,
-  which can be computed in polynomial time~\cite{wagner-fischer}.
-  \C{edit\_seq} modifies one such algorithm to also compute the edit
-  sequence (an \C{edit list}). The implementation specified in
-  Fig.~\ref{fig:mlist-sig} represents edits using the type \C{edit}.
-  Constructors \C{I}, \C{D}, and \C{S} stand for \C{insert},
-  \C{delete}, and \C{subst}, respectively\footnote{
-    Note that \C{I}, \C{D} and \C{S} are \emph{not} effects; no list
-    function generates them, and they are not exchanged between
-    concurrent threads. They are simply tags used by the list merge
-    operation for convenience.
-  }. The subst constructor also carries the \C{A.t} element that was
-  substituted. The element serves as the \C{lca} argument to
-  \C{A.merge} in case of concurrent conflicting substitutions.
-  Fig.~\ref{fig:list-eg} illustrates edit sequences for a sample list.
-  The sequence \C{[I(c,0); S(3,c,s)]} maps the list \C{[a;b;c]} to
-  \C{[c;a;b;s]} because \C{subst 3 s (insert c 0 [a;b;c]) =
-  [c;a;b;s]}.
+    computes the shortest sequence of list operations that need to be
+    applied on \C{v} to obtain \C{v'}. Such a sequence is called an
+    \emph{edit sequence}. The length of the sequence corresponds to
+    the standard notion of the \emph{edit distance} between the two
+    lists, which can be computed in polynomial
+    time~\cite{wagner-fischer}.  \C{edit\_seq} modifies one such
+    algorithm to also compute the edit sequence (an \C{edit
+      list}). The implementation specified in Fig.~\ref{fig:mlist-sig}
+    represents edits using the type \C{edit}.  Constructors \C{I},
+    \C{D}, and \C{S} stand for \C{insert}, \C{delete}, and \C{subst},
+    respectively.\footnote{ Note that \C{I}, \C{D} and \C{S} are
+      \emph{not} effects; no list function generates them, and they
+      are not exchanged between concurrent threads. They are simply
+      tags used by the list merge operation for convenience.  Indeed,
+      to better appreciate the virtues of mergeable types, we
+      encourage the reader to think about how one might implement a
+      replicated list with this functionality using an explicit effect
+      representation as described in Sec.~\ref{sec:intro}.}  The subst
+    constructor also carries the \C{A.t} element that was
+    substituted. The element serves as the \C{lca} argument to
+    \C{A.merge} in case of concurrent conflicting substitutions.
+    Fig.~\ref{fig:list-eg} illustrates edit sequences for a sample
+    list.  The sequence \C{[I(c,0); S(3,c,s)]} maps the list
+    \C{[a;b;c]} to \C{[c;a;b;s]} because \C{subst 3 s (insert c 0
+      [a;b;c]) = [c;a;b;s]}.
   \item  \C{op\_transform} takes a pair of edit sequences, $s_1$ and
   $s_2$, that map a list $v$ to two different lists, $v_1$ and $v_2$
   (e.g., Fig.~\ref{fig:list-eg}), and transforms $s_1$ to $s_1'$ such
@@ -370,36 +365,28 @@ lists, $v_1$ and $v_2$ w.r.t their common ancestor $v$, transforms one
 of them (say, $s_1$) w.r.t $s_2$ to obtain $s_1'$, and finally applies
 (the operations defined by) $s_1'$ to $v_2$ to obtain the merged list.
 
-\GK{Somewhere here, I want to say:} To better appreciate the virtues
-of mergeable types, we encourage the reader to think about how one
-might implement the mergeable list type with the explicit effect
-representation described in Sec.~\ref{sec:intro}.
-
-\begin{figure}
-  \centering
-  \includegraphics[scale=0.4]{Figures/shopping-list}
-
-  \caption{Merging concurrent shopping lists}
-  \label{fig:shopping-list}
-\end{figure}
-
 A significant advantage of mergeable types is their composability. As
 demonstrated by \C{MList}, the merge semantics of a composed mergeable
-type is a composition of merge semantics of the individual types.  For
+type is a composition of the merge operations of its constituent types.  For
 instance, a mergeable list of integers can be obtained by
 instantiating \C{MList} for an \C{Int} type, where \C{Int.merge} is
-same as \C{Counter.merge} (Sec.~\ref{sec:intro}). 
+the same as \C{Counter.merge} (Sec.~\ref{sec:intro}). 
 An alternative instantiation of \C{MList} is for a quantity type
-(\C{Qty}) that, like \C{Int}, supports \C{add} and \C{subtract}
-operations, but defines its \C{merge} semantics a little differently:
+\begin{wrapfigure}{l}{.45\textwidth}
+  \centering
+  \includegraphics[scale=0.4]{Figures/list-eg}
+  \caption{Lists of mergeable values are mergeable. }
+  \label{fig:list-eg}
+\end{wrapfigure}
+(\C{Qty}) that supports \C{add} and \C{subtract}
+operations, but defines its \C{merge} opeation a little differently:
 \begin{ocaml}
 let merge lca v1 v2 = if v1 = lca then v2 else (if v2 = lca then v1 else max v1 v2)
 \end{ocaml}
 \C{MList(Qty)}, like \C{MList(Int)}, is a list of integers, and has
 the same semantics under a sequential execution. Their differences
 however manifest under a concurrent execution, where both adopt
-different methods to reconcile concurrent updates.  is given
-below.
+different methods to reconcile concurrent updates.  
 
 % The mergeable list data type demonstrates a common pattern of writing
 % \C{merge} functions applicable to a range of functional data
@@ -415,23 +402,30 @@ below.
 
 
 {\bf Shopping List}. A non-trivial demonstration of composability of
-mergeable types is a shopping list application. The application
-allows its users to collaboratively build a grocery shopping
-list (listing items in decreasing ), by adding new items with a
-specified quantity, deleting existing items, and increasing or
-decreasing their quantity. An item (\C{Item.t}) is represented as a
-tuple of its name (a string) and the quantity (A \C{Qty.t}). Merge
-function for \C{Item.t} merges the quantities of items (using
-\C{Qty.merge}) with same names. Items with different names are
-considered distinct. A shopping list is a mergeable list of items
-(i.e., \C{MList(Item)}). \C{MList(Item).merge} automatically lifts the
-merge semantics for items to merge semantics for lists of items.
-Fig.~\ref{fig:shopping-list} illustrates. Here, two users, Alice and
-Bob, concurrently edit a shopping list whose initial contents are
-as milk and eggs. While both simultaneously update the quantity of
-eggs, Bob also removes milk and inserts candy. The merged shopping
-list contains eggs and candy, where the quantity of eggs is obtained
-by merging Alice's and Bob's quantity as per \C{Qty.merge} semantics.
+mergeable types is a shopping list application. The application allows
+its users to collaboratively build a grocery shopping list (listing
+items by decreasing quantity), by adding new items with a specified
+quantity, deleting existing items, and increasing or decreasing their
+quantity. An item (\C{Item.t}) is represented as a tuple of its name
+(a string) and the quantity (A \C{Qty.t}). The merge function for
+\begin{wrapfigure}{l}{.5\textwidth}
+  \centering
+  \includegraphics[scale=0.3]{Figures/shopping-list}
+  \caption{Merging concurrent shopping lists}
+  \label{fig:shopping-list}
+\end{wrapfigure}
+\C{Item.t} merges the quantities of items (using \C{Qty.merge}) having
+the same names. Items with different names are considered distinct. A
+shopping list is a mergeable list of items (i.e.,
+\C{MList(Item)}). \C{MList(Item).merge} automatically lifts the merge
+semantics for items to merge semantics for lists of items.
+Fig.~\ref{fig:shopping-list} illustrates its behavior.  Here, two
+users, Alice and Bob, concurrently edit a shopping list whose initial
+contents are \C{milk} and \C{eggs}. While both simultaneously update the
+quantity of eggs, Bob also removes milk and inserts candy. The merged
+shopping list contains eggs and candy, where the quantity of eggs is
+obtained by merging Alice's and Bob's quantity as per the definition
+of \C{Qty.merge}.
 
 The examples described above make certain assumptions about the model
 and the underlying system, such as the existence of a single least
