Added merge tree code

--- a/paper/evaluation.tex
+++ b/paper/evaluation.tex
@@ -3,7 +3,7 @@
 
 In this section, we present an evaluation of \name programming model with the
 aim of assesing its practical utility for describing geo-distributed eventually
-consistent applications. In particular, we
+consistent applications. Unlike distributed
 
 To this end, we have implemented a collaborative editing application that
 simulates concurrent editing of the same document by several authors. This
