--- a/paper/model.tex
+++ b/paper/model.tex
@@ -275,7 +275,7 @@ merge functions for more sophisticated types.
 
 \input{list-sig}
 
-{\bf Lists}.  \KC{Why don't we call these ropes?} As an abstract data type, lists support three
+{\bf Lists}. As an abstract data type, lists support three
 operations: \C{insert x i l}, to insert an element \C{x} at position
 \C{i} in the list \C{l}, \C{delete i l}, to delete the element at
 \C{i}'th position, and \C{subst i x l}, to substitute the element at
