--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -326,6 +326,8 @@ morekeywords={module, match, when, @@deriving, not, : , /\\}
 
 \input{model}
 
+\input{examples}
+
 \input{semantics}
 
 \input{system-model}
