--- a/paper/all.bib
+++ b/paper/all.bib
@@ -991,3 +991,91 @@ year = {2015},
 	keywords = {eventual consistency, replication, weak memory},
 }
 
+
+@Inbook{Mat97,
+author="Matthews, David",
+editor="Nielson, Flemming",
+title= {{Concurrency in Poly/ML}},
+bookTitle="ML with Concurrency: Design, Analysis, Implementation, and Application",
+year="1997",
+publisher="Springer New York",
+address="New York, NY",
+pages="31--58",
+isbn="978-1-4612-2274-3",
+doi="10.1007/978-1-4612-2274-3_3",
+url="http://dx.doi.org/10.1007/978-1-4612-2274-3_3"
+}
+
+@article{CJK95,
+ author = {Cejtin, Henry and Jagannathan, Suresh and Kelsey, Richard},
+ title = {{Higher-order Distributed Objects}},
+ journal = {ACM Trans. Program. Lang. Syst.},
+ issue_date = {Sept. 1995},
+ volume = {17},
+ number = {5},
+ month = sep,
+ year = {1995},
+ issn = {0164-0925},
+ pages = {704--739},
+ numpages = {36},
+ url = {http://doi.acm.org/10.1145/213978.213986},
+ doi = {10.1145/213978.213986},
+ acmid = {213986},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {concurrency, continuations, higher-order languages, message-passing},
+} 
+
+@Inbook{Thomsen1993,
+author="Thomsen, Bent
+and Leth, Lone
+and Giacalone, Alessandro",
+editor="de Bakker, J. W.
+and de Roever, W. -P.
+and Rozenberg, G.",
+title= {{Some issues in the semantics of facile distributed programming}},
+bookTitle="Semantics: Foundations and Applications: REX Workshop Beekbergen, The Netherlands, June 1--4, 1992 Proceedings",
+year="1993",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="563--593",
+isbn="978-3-540-47595-8",
+doi="10.1007/3-540-56596-5_47",
+url="http://dx.doi.org/10.1007/3-540-56596-5_47"
+}
+
+
+@inproceedings{EBPJ11,
+ author = {Epstein, Jeff and Black, Andrew P. and Peyton-Jones, Simon},
+ title = {{Towards Haskell in the Cloud}},
+ booktitle = {Proceedings of the 4th ACM Symposium on Haskell},
+ series = {Haskell '11},
+ year = {2011},
+ isbn = {978-1-4503-0860-1},
+ location = {Tokyo, Japan},
+ pages = {118--129},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2034675.2034690},
+ doi = {10.1145/2034675.2034690},
+ acmid = {2034690},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {erlang, haskell, message-passing},
+}
+
+@inproceedings{Car95,
+ author = {Cardelli, Luca},
+ title = {{A Language with Distributed Scope}},
+ booktitle = {Proceedings of the 22Nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ series = {POPL '95},
+ year = {1995},
+ isbn = {0-89791-692-1},
+ location = {San Francisco, California, USA},
+ pages = {286--297},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/199448.199516},
+ doi = {10.1145/199448.199516},
+ acmid = {199516},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
